--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -20,3 +20,44 @@ jobs:
               echo "PR title does not match the required format 'type(scope): description' or 'type: description'"
               exit 1
           fi
+
+  check-web-build:
+    name: Check Web Build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - uses: dorny/paths-filter@v2
+        id: changes
+        with:
+          filters: |
+            package:
+              - 'web/**'
+
+      - uses: actions/setup-node@v3
+        if: steps.changes.outputs.package == 'true'
+        with:
+          cache: npm
+          node-version: 18
+
+      - name: Install dependencies
+        if: steps.changes.outputs.package == 'true'
+        run: npm install
+        working-directory: web
+
+      - name: Build
+        if: steps.changes.outputs.package == 'true'
+        id: build
+        run: npm run build || echo "::set-output name=status::failed"
+        working-directory: web
+
+      - name: Check build
+        if: steps.changes.outputs.package == 'true'
+        run: |
+          if [ "${{ steps.build.outputs.status }}" = "failed" ]; then
+            echo "The build failed. Please fix the errors and try again."
+            exit 1
+          else
+            echo "The build was successful; proceeding."
+          fi
