--- a/.github/workflows/push-staging.yml
+++ b/.github/workflows/push-staging.yml
@@ -21,6 +21,7 @@ jobs:
   terraform-shared-deploy:
     name: Deploy shared infrastructure
     runs-on: ubuntu-latest
+    needs: [cleanup]
     permissions: write-all
     steps:
       - uses: actions/checkout@v3
