feat(ci): add mechanism to store plan files get stored in s3 (#487)

--- a/.github/workflows/pull-request-staging.yml
+++ b/.github/workflows/pull-request-staging.yml
@@ -14,6 +14,8 @@ jobs:
     name: Plan Shared Infrastructure
     runs-on: ubuntu-latest
     environment: staging
+    env:
+      ENVIRONMENT: staging
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -54,11 +56,8 @@ jobs:
           set -e
         working-directory: terraform/shared
 
-      - name: Upload Terraform Plan
-        uses: actions/upload-artifact@v3
-        with:
-          name: terraform-shared-plan
-          path: terraform/shared/shared.tfplan
+      - name: Upload Terraform Plan to S3
+        run: aws s3 cp terraform/shared/shared.tfplan s3://github-actions-remote-artifacts/${{env.ENVIRONMENT}}/plans/shared.tfplan
 
       - name: Comment PR
         uses: actions/github-script@v6
@@ -78,6 +77,8 @@ jobs:
     name: Plan Environment Infrastructure
     runs-on: ubuntu-latest
     environment: staging
+    env:
+      ENVIRONMENT: staging
     needs: [terraform-shared-plan]
     steps:
       - name: Checkout
@@ -119,11 +120,8 @@ jobs:
           set -e
         working-directory: terraform/environment
 
-      - name: Upload Terraform Plan
-        uses: actions/upload-artifact@v3
-        with:
-          name: terraform-environment-plan
-          path: terraform/environment/environment.tfplan
+      - name: Upload Terraform Plan to S3
+        run: aws s3 cp terraform/environment/environment.tfplan s3://github-actions-remote-artifacts/${{env.ENVIRONMENT}}/plans/environment.tfplan
 
       - name: Comment PR
         uses: actions/github-script@v6
