--- a/.github/workflows/push-staging.yml
+++ b/.github/workflows/push-staging.yml
@@ -9,12 +9,15 @@ jobs:
   cleanup:
     name: Clean up deployment history
     runs-on: ubuntu-latest
+    environment: staging
+    env:
+      ENVIRONMENT: staging
     permissions: write-all
     steps:
       - name: 🗑 Delete deployment
         uses: strumwolf/delete-deployment-environment@v2
         with:
-          environment: staging
+          environment: ${{env.ENVIRONMENT}}
           token: ${{ secrets.GH_TOKEN }}
           onlyRemoveDeployments: true
 
@@ -22,17 +25,17 @@ jobs:
     name: Deploy shared infrastructure
     runs-on: ubuntu-latest
     needs: [cleanup]
+    environment: staging
+    env:
+      ENVIRONMENT: staging
     permissions: write-all
     steps:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
 
-      - name: Download Terraform Plan
-        uses: actions/download-artifact@v2
-        with:
-          name: terraform-shared-plan
-          path: terraform/shared
+      - name: Download Terraform Plan from S3
+        run: aws s3 cp s3://github-actions-remote-artifacts/${{env.ENVIRONMENT}}/plans/shared.tfplan terraform/shared/shared.tfplan
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v2
@@ -52,17 +55,17 @@ jobs:
     name: Deploy environment infrastructure
     runs-on: ubuntu-latest
     permissions: write-all
+    environment: staging
+    env:
+      ENVIRONMENT: staging
     needs: [terraform-shared-deploy]
     steps:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
 
-      - name: Download Terraform Plan
-        uses: actions/download-artifact@v2
-        with:
-          name: terraform-environment-plan
-          path: terraform/environment
+      - name: Download Terraform Plan from S3
+        run: aws s3 cp s3://github-actions-remote-artifacts/${{env.ENVIRONMENT}}/plans/environment.tfplan terraform/environment/environment.tfplan
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v2
@@ -77,21 +80,6 @@ jobs:
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-
-  # check-for-web-folder-changes:
-  #   name: Check for changes in web
-  #   runs-on: ubuntu-latest
-  #   outputs:
-  #     package_changed: ${{ steps.changes.outputs.package }}
-  #   steps:
-  #     - uses: actions/checkout@v3
-
-  #     - uses: dorny/paths-filter@v2
-  #       id: changes
-  #       with:
-  #         filters: |
-  #           package:
-  #             - 'web/**'
 
   deploy-to-s3:
     name: Deploy to S3
