--- a/.github/workflows/job-deploy-terraform.yml
+++ b/.github/workflows/job-deploy-terraform.yml
@@ -24,7 +24,7 @@ on:
 
 jobs:
   run:
-    name: ${{inputs.label}}
+    name: ${{inputs.label}} Infrastructure
     runs-on: ubuntu-latest
     permissions: write-all
     environment: ${{inputs.environment}}
