--- a/.github/workflows/pull-request-staging.yml
+++ b/.github/workflows/pull-request-staging.yml
@@ -10,7 +10,7 @@ on:
       - synchronize
 
 jobs:
-  terraform-shared-plan:
+  plan-terraform-shared:
     name: Plan Shared Infrastructure
     runs-on: ubuntu-latest
     environment: staging
@@ -73,13 +73,13 @@ jobs:
               body: '```terraform\n' + output + '\n```'
             })
 
-  terraform-environment-plan:
+  plan-terraform-environment:
     name: Plan Environment Infrastructure
     runs-on: ubuntu-latest
     environment: staging
     env:
       ENVIRONMENT: staging
-    needs: [terraform-shared-plan]
+    needs: [plan-terraform-shared]
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -140,7 +140,7 @@ jobs:
   automated-tests:
     name: Automated Tests
     runs-on: ubuntu-latest
-    needs: [terraform-environment-plan]
+    needs: [plan-terraform-environment]
     strategy:
       matrix:
         component:
