--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -14,7 +14,7 @@ jobs:
           PATTERN="^(feat|fix)(\(web\)|\(authentication\)|\(authorizer\)|\(checklist\)|\(company\)|\(position\)|\(question\)|\(ci\)|\(terraform\)|\(db\)): .+"
           EXCEPTIONS="^(Merge to Production|Merge to Staging|chore\(.*\))$"
 
-          if [[ " ${EXCEPTIONS[@]} " =~ " $PR_TITLE " ]]; then
+          if [[ $PR_TITLE =~ $EXCEPTIONS ]]; then
               echo "PR title is an allowed exception."
           elif ! [[ $PR_TITLE =~ $PATTERN ]]; then
               echo "PR title does not match the required format 'type(scope): description' or 'type: description'"
