--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -29,7 +29,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - uses: dorny/paths-filter@v2
+      - name: Check Web Files Changed
+        uses: dorny/paths-filter@v2
         id: changes
         with:
           filters: |
