--- a/lambdas/question/serverless.yml
+++ b/lambdas/question/serverless.yml
@@ -42,5 +42,31 @@ functions:
       - sqs: ${ssm:/terraform/${self:provider.stage}/sqs/question_generation_processor_queue_arn}
     timeout: 300
 
+  generation-publisher:
+    name: ${self:provider.stage}-question-generation-publisher
+    image:
+      name: default
+      command:
+        - publish_generation.handler
+    events:
+      - http:
+          path: /questions/generate
+          method: POST
+          cors:
+            origins:
+              - https://www.matchyaa.com
+              - https://matchyaa.com
+              - https://www.staging.matchyaa.com
+              - https://staging.matchyaa.com
+              - http://127.0.0.1:5173
+            allowCredentials: true
+          authorizer:
+            type: request
+            identitySource: method.request.header.Cookie
+            resultTtlInSeconds: 300
+            name: ${self:provider.stage}-question-generation-publisher-authorizer
+            arn: arn:aws:lambda:${aws:region}:${aws:accountId}:function:${self:provider.stage}-authorizer
+    timeout: 30
+
 plugins:
   - serverless-deployment-bucket
