Add candidate and question modules to pull request workflow

--- a/.github/workflows/pull-request-develop.yml
+++ b/.github/workflows/pull-request-develop.yml
@@ -21,9 +21,11 @@ jobs:
             "web",
             "authentication",
             "authorizer",
+            "candidate",
             "checklist",
             "company",
             "position",
+            "question",
           ]
     steps:
       - uses: actions/checkout@v3
@@ -56,9 +58,11 @@ jobs:
             "web",
             "authentication",
             "authorizer",
+            "candidate",
             "checklist",
             "company",
             "position",
+            "question",
           ]
     steps:
       - uses: actions/checkout@v3
