fix(ci): create manual dispatch for infrastructure deployment

--- a/.github/workflows/job-deploy-infrastructure.yml
+++ b/.github/workflows/job-deploy-infrastructure.yml
@@ -14,17 +14,10 @@ on:
         type: string
         required: true
         default: "staging"
-    secrets:
-      AWS_ACCESS_KEY_ID:
-        description: "AWS Access Key ID"
-        required: true
-      AWS_SECRET_ACCESS_KEY:
-        description: "AWS Secret Access Key"
-        required: true
 
 jobs:
   run:
-    name: Infrastructure (${{inputs.label}})
+    name: ${{inputs.label}}
     runs-on: ubuntu-latest
     permissions: write-all
     environment: ${{inputs.environment}}
@@ -51,7 +44,7 @@ jobs:
         working-directory: terraform/${{inputs.component}}
 
       - name: Select Terraform Workspace
-        if: ${{inputs.component == 'environment'}}
+        if: inputs.component == 'environment'
         run: terraform workspace select ${{inputs.environment}}
         working-directory: terraform/${{inputs.component}}
 
