--- a/.github/workflows/job-deploy-infrastructure.yml
+++ b/.github/workflows/job-deploy-infrastructure.yml
@@ -22,7 +22,8 @@ jobs:
     permissions: write-all
     environment: ${{inputs.environment}}
     steps:
-      - uses: actions/checkout@v3
+      - name: Fetch Repository
+        uses: actions/checkout@v3
         with:
           fetch-depth: 0
 
