--- a/.github/workflows/job-plan-infrastructure.yml
+++ b/.github/workflows/job-plan-infrastructure.yml
@@ -20,7 +20,7 @@ jobs:
     runs-on: ubuntu-latest
     environment: ${{inputs.environment}}
     steps:
-      - name: Checkout
+      - name: Fetch Repository
         uses: actions/checkout@v3
 
       - name: Configure AWS Credentials
