--- a/.github/workflows/job-create-release.yml
+++ b/.github/workflows/job-create-release.yml
@@ -16,6 +16,8 @@ jobs:
     steps:
       - name: Fetch Repository
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
 
       - name: Update local branch
         run: |
