--- a/.github/workflows/pull-request-staging.yml
+++ b/.github/workflows/pull-request-staging.yml
@@ -41,6 +41,8 @@ jobs:
     steps:
       - name: Fetch Repository
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
 
       - name: Check Web Files Changed
         uses: dorny/paths-filter@v2
