--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -32,6 +32,8 @@ jobs:
     steps:
       - name: Fetch Repository
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
 
       - name: Check Web Files Changed
         uses: dorny/paths-filter@v2
