--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -26,8 +26,8 @@ jobs:
               exit 1
           fi
 
-  check-files-changed-web:
-    name: Check Files Changed (Web)
+  check-build-web:
+    name: Check Build (Web)
     runs-on: ubuntu-latest
     steps:
       - name: Fetch Repository
