add step to embed vercel secrets in tfvars

--- a/.github/workflows/job-plan-infrastructure.yml
+++ b/.github/workflows/job-plan-infrastructure.yml
@@ -70,6 +70,15 @@ jobs:
           echo '}' >> terraform.tfvars
         working-directory: terraform/${{inputs.component}}
 
+      - name: Set Terraform Variables (Production)
+        if: inputs.component == 'shared' && inputs.environment == 'production'
+        run: |
+          echo 'vercel_records = {' >> terraform.tfvars
+          echo '  "a": "${{secrets.TF_A_VERCEL_RECORDS}}",' >> terraform.tfvars
+          echo '  "cname": "${{secrets.TF_CNAME_VERCEL_RECORDS}}"' >> terraform.tfvars
+          echo '}' >> terraform.tfvars
+        working-directory: terraform/${{inputs.component}}
+
       - name: Terraform Plan
         id: plan
         run: |
