--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -69,3 +69,47 @@ jobs:
           else
             echo "The build was successful; proceeding."
           fi
+
+  check-build-waitlist:
+    name: Check Build (Waitlist)
+    runs-on: ubuntu-latest
+    steps:
+      - name: Fetch Repository
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
+      - name: Check Waitlist Files Changed
+        uses: dorny/paths-filter@v2
+        id: changes
+        with:
+          filters: |
+            package:
+              - 'waitlist/**'
+
+      - uses: actions/setup-node@v3
+        if: steps.changes.outputs.package == 'true'
+        with:
+          cache: npm
+          node-version: 18
+
+      - name: Install dependencies
+        if: steps.changes.outputs.package == 'true'
+        run: npm install
+        working-directory: waitlist
+
+      - name: Build
+        if: steps.changes.outputs.package == 'true'
+        id: build
+        run: npm run build || echo "::set-output name=status::failed"
+        working-directory: waitlist
+
+      - name: Check build
+        if: steps.changes.outputs.package == 'true'
+        run: |
+          if [ "${{ steps.build.outputs.status }}" = "failed" ]; then
+            echo "The build failed. Please fix the errors and try again."
+            exit 1
+          else
+            echo "The build was successful; proceeding."
+          fi
