--- a/lambdas/candidate/serverless.yml
+++ b/lambdas/candidate/serverless.yml
@@ -56,5 +56,32 @@ functions:
             arn: arn:aws:lambda:${aws:region}:${aws:accountId}:function:${self:provider.stage}-authorizer
     timeout: 30
 
+
+  retrieve:
+    name: ${self:provider.stage}-candidate-retrieve
+    image:
+      name: default
+      command:
+        - retrieve.handler
+    events:
+      - http:
+          path: /candidates
+          method: GET
+          cors:
+            origins:
+              - https://www.matchyaa.com
+              - https://matchyaa.com
+              - https://www.staging.matchyaa.com
+              - https://staging.matchyaa.com
+              - http://127.0.0.1:5173
+            allowCredentials: true
+          authorizer:
+            type: request
+            identitySource: method.request.header.Cookie
+            resultTtlInSeconds: 300
+            name: ${self:provider.stage}-candidate-retrieve-authorizer
+            arn: arn:aws:lambda:${aws:region}:${aws:accountId}:function:${self:provider.stage}-authorizer
+    timeout: 30
+
 plugins:
   - serverless-deployment-bucket
