--- a/lambdas/company/serverless.yml
+++ b/lambdas/company/serverless.yml
@@ -30,12 +30,12 @@ provider:
     POSTGRES_PASSWORD: ${ssm:/terraform/${self:provider.stage}/rds/db_password}
 
 functions:
-  retrieve:
-    name: ${self:provider.stage}-company-retrieve
+  me:
+    name: ${self:provider.stage}-company-me
     image:
       name: default
       command:
-        - handler.retrieve
+        - me.handler
     events:
       - http:
           path: /companies/me
@@ -52,7 +52,7 @@ functions:
             type: request
             identitySource: method.request.header.Cookie
             resultTtlInSeconds: 300
-            name: ${self:provider.stage}-company-retrieve-authorizer
+            name: ${self:provider.stage}-company-me-authorizer
             arn: arn:aws:lambda:${aws:region}:${aws:accountId}:function:${self:provider.stage}-authorizer
 
 plugins:
