fix(ci): pull-request-production pipeline has wrong trigger

--- a/.github/workflows/pull-request-production.yml
+++ b/.github/workflows/pull-request-production.yml
@@ -3,7 +3,7 @@ name: PR Pipeline (Production)
 on:
   pull_request:
     branches:
-      - production
+      - main
     types:
       - opened
       - reopened
